--- a/AA10 Pagina web/AA10 Pagina web/index.html
+++ b/AA10 Pagina web/AA10 Pagina web/index.html
@@ -3,26 +3,26 @@
   <head>
       <!--Head es una sección que contiene metadatos-->
     <meta charset="utf-8">
-    <title>Chichetnitza</title>
+    <title>Chichen Itzá</title>
     <!--INSERTAR VINCULO A CSS-->
   </head>
   <body>
 
 <h2>Ciudad ceremonial más grande de México<h2>
-<h3>Pedro Antonio Alvarez Flores<h3>
-    
-     <img src="./img/chichen.jfif" alt= "chichen inicio" >
+<h3>Pedro Antonio Alvarez Flores</h3> <!--AQUI OMITISTE /-->
 
-<p> <strong>Chichén Itzá</strong>
+     <img src="./img/chichen.jfif" alt= "chichen inicio">
+
+<p><strong>Chichén Itzá</strong>
 </br> es el mejor ejemplo de los movimientos migratorios que se dieron en Mesoamérica hacia el Posclásico Temprano, ya que reúne rasgos
-de cultura material tanto del área Maya como del centro de México, particularmente de filiación Tolteca. Además Chichén Itzá fue capital de un amplio territorio 
+de cultura material tanto del área Maya como del centro de México, particularmente de filiación Tolteca. Además Chichén Itzá fue capital de un amplio territorio
 en la península de Yucatán, encabezado por la liga de Mayapán, del 987 hasta el año 1200 d. C. </br>La zona arqueológica Chichén Itzá es famosa mundialmente por el juego de luz y sombra
 que en cada equinoccio ocurre sobre la escalinata del basamento piramidal conocido como El castillo. En este, el sol, conforme asciende sobre el horizonte, va iluminando la alfarda
 poniente del basamento, creando triángulos de luz y sombra que parecen descender hasta la cabeza de serpiente en el desplante de la alfarda. </br>Este evento, logrado a partir de la
 correcta orientación e inclinación de los planos del basamento, manifiesta el gran nivel de conocimiento astronómico y arquitectónico que los Mayas poseían, y que ha dado lugar a
-ser una de las culturas y regiones más estudiadas en torno a estos temas, además de la organización político territorial y la explotación de recursos. Cronología 525 a 1200 d. C. 
-Ubicación cronológica principal: Posclásico Temprano 900 a 1200 d. C.</p>
-  
+ser una de las culturas y regiones más estudiadas en torno a estos temas, además de la organización político territorial y la explotación de recursos. Cronología 525 a 1200 d. C.
+Ubicación cronológica principal: Posclásico Temprano 900 a 1200 d. C. </p>
+
 
 <ul>
    <li>se encuentra cerca del pueblko de Pisté 1</li>
