--- a/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
+++ b/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
@@ -40,16 +40,16 @@
       </tr>
       <tr>
         <td colspan="6">MAPITA
-          <!--<iframe class="qgiscloud" style="height:550px;" src="https://qgiscloud.com/PedroAntonio21/practicapedro/?l=pract&t=practicapedro&e=-9976974%2C2388006%2C-9976466%2C2388259 " frameborder="0" ></iframe> -->
+          <iframe class="qgiscloud" style="height:550px;" src="https://qgiscloud.com/antonio98/trab-final/" frameborder="0" ></iframe> 
         </td>
-        <td style="width:30px;"" colspan="6"> <id class="al">  
+        <td style="width:30px;"" colspan="6" id class="al">  
           Al ser conquistada la Península de Yucatán, por Francisco de Montejo fue por que presento menos resistecia
         </id td> 	
       </tr>
     </tbody>
     <tfoot>
         <tr>
-          <td colspan="7">
+          <td colspan="7" id class="creat">
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img class="cc" alt="Licencia Creative Commons" style="border-width:0" src="./img/byncsa.png" /></a><br />Esta obra está bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Licencia Creative Commons Atribución-NoComercial-CompartirIgual 4.0 Internacional</a>.
           </td>
       </tr>
@@ -60,4 +60,4 @@
   </body>
 
 </html>
-     <--!<profa no supe como ponerle el color intente con ambos recuadros y no pude :(--> 
+    
