--- a/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
+++ b/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
@@ -31,19 +31,22 @@
       <table id="tabla" border="1" style="width:100%; height:100%;">
       <tr>
         <td class="ini"><a href="Index.html" target="_self">Inicio</a></td>
-        <td class="pedro"><a href="MapaPrueba.html" target="_self">Mapa Pedro</td>
-        <td class="ja">Mapa Jaz</td>
-        <td class="andr">Mapa Andrés</td>
-        <td class="edu">Mapa Eduardo</td>
-        <td class="alv">Mapa Álvaro</td>
-        <td class="val">Mapa Valeria</td>
+        <td class="pedro"><a href="MapaPrueba.html" target="_self">Lengua Indígena</td>
+        <td class="ja">Segregación socioespacial</td>
+        <td class="andr">Gentrificación</td>
+        <td class="edu">Migración</td>
+        <td class="alv">Tema Álvaro</td>
+        <td class="val">Tema Valeria</td>
       </tr>
       <tr>
         <td colspan="6">MAPITA
           <iframe class="qgiscloud" style="height:550px;" src="https://qgiscloud.com/antonio98/trab-final/" frameborder="0" ></iframe> 
         </td>
         <td style="width:30px;"" colspan="6" id class="al">  
-          Al ser conquistada la Península de Yucatán, por Francisco de Montejo fue por que presento menos resistecia
+          <p align="justify"><b>Mérida es el principal asentamiento humano de la península de Yucatán por su tamaño poblacional, antigüedad, ubicación, predominio en el sistema de relaciones regionales y desarrollo de infraestructura urbana. 
+		     Esta ciudad, capital política del estado de Yucatán, ha recibido desde hace medio siglo flujos migratorios indígenas de pueblos y comunidades adyacentes 
+		     a su periferia urbana.</b> <b>así como de otros estados del país, que se fueron intensificando a raíz de la desarticulación y quiebra del sistema agrícola ejidal y de la integración funcional de las comunidades rurales aledañas; estos flujos continuaron en la última década y dieron lugar a un área plurilingüe con hablantes de maya y chol; entre otras lenguas, 
+			 no obstante en la capital el idioma predominante es el español.</b></p>
         </id td> 	
       </tr>
     </tbody>
