--- a/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
+++ b/TrabajoFinalTIC/TrabajoFinalTIC/MapaPedro.html
@@ -45,8 +45,8 @@
         <td style="width:30px;"" colspan="6" id class="al">  
           <p align="justify"><b>Mérida es el principal asentamiento humano de la península de Yucatán por su tamaño poblacional, antigüedad, ubicación, predominio en el sistema de relaciones regionales y desarrollo de infraestructura urbana. 
 		     Esta ciudad, capital política del estado de Yucatán, ha recibido desde hace medio siglo flujos migratorios indígenas de pueblos y comunidades adyacentes 
-		     a su periferia urbana.</b> <b>así como de otros estados del país, que se fueron intensificando a raíz de la desarticulación y quiebra del sistema agrícola ejidal y de la integración funcional de las comunidades rurales aledañas; estos flujos continuaron en la última década y dieron lugar a un área plurilingüe con hablantes de maya y chol; entre otras lenguas, 
-			 no obstante en la capital el idioma predominante es el español.</b></p>
+		     a su periferia urbana. Así como de otros estados del país, que se fueron intensificando a raíz de la desarticulación y quiebra del sistema agrícola ejidal y de la integración funcional de las comunidades rurales aledañas; estos flujos continuaron en la última década y dieron lugar a un área plurilingüe con hablantes de maya y chol; entre otras lenguas, 
+			 no obstante en la capital el idioma predominante es el español.</p></b>
         </id td> 	
       </tr>
     </tbody>
